src/main/java/es/uniovi/dlp/parser/XanaParser.java
// Generated from java-escape by ANTLR 4.11.1

package es.uniovi.dlp.parser;

import es.uniovi.dlp.ast.*;
import es.uniovi.dlp.ast.expressions.*;
import es.uniovi.dlp.ast.program.*;
import es.uniovi.dlp.ast.statements.*;
import es.uniovi.dlp.ast.types.*;
import java.util.ArrayList;
import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class XanaParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int T__0 = 1,
      T__1 = 2,
      T__2 = 3,
      T__3 = 4,
      T__4 = 5,
      T__5 = 6,
      T__6 = 7,
      T__7 = 8,
      T__8 = 9,
      T__9 = 10,
      T__10 = 11,
      T__11 = 12,
      T__12 = 13,
      T__13 = 14,
      T__14 = 15,
      T__15 = 16,
      T__16 = 17,
      T__17 = 18,
      T__18 = 19,
      T__19 = 20,
      T__20 = 21,
      T__21 = 22,
      T__22 = 23,
      T__23 = 24,
      T__24 = 25,
      T__25 = 26,
      T__26 = 27,
      T__27 = 28,
      T__28 = 29,
      T__29 = 30,
      T__30 = 31,
      T__31 = 32,
      T__32 = 33,
      T__33 = 34,
      T__34 = 35,
      T__35 = 36,
      T__36 = 37,
      T__37 = 38,
      INT_CONSTANT = 39,
      CHAR_CONSTANT = 40,
      REAL_CONSTANT = 41,
      ID = 42,
      SINGLE_LINE_COMMENT = 43,
      MULTI_LINE_COMMENT = 44,
      WS = 45;
  public static final int RULE_program = 0,
      RULE_definition_list = 1,
      RULE_definition = 2,
      RULE_var_definition_list = 3,
      RULE_function_definition = 4,
      RULE_main_function = 5,
      RULE_params = 6,
      RULE_function_body = 7,
      RULE_statement = 8,
      RULE_statement_list = 9,
      RULE_if_else_statement = 10,
      RULE_while_statement = 11,
      RULE_assignment_statement = 12,
      RULE_return_statement = 13,
      RULE_puts_statement = 14,
      RULE_in_statement = 15,
      RULE_io_list = 16,
      RULE_expression = 17,
      RULE_function_invocation = 18,
      RULE_function_invocation_params = 19,
      RULE_type = 20,
      RULE_struct_field_list = 21,
      RULE_struct_field = 22,
      RULE_function_type = 23,
      RULE_primitive_type = 24;

  private static String[] makeRuleNames() {
    return new String[] {
      "program",
      "definition_list",
      "definition",
      "var_definition_list",
      "function_definition",
      "main_function",
      "params",
      "function_body",
      "statement",
      "statement_list",
      "if_else_statement",
      "while_statement",
      "assignment_statement",
      "return_statement",
      "puts_statement",
      "in_statement",
      "io_list",
      "expression",
      "function_invocation",
      "function_invocation_params",
      "type",
      "struct_field_list",
      "struct_field",
      "function_type",
      "primitive_type"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null,
      "','",
      "'::'",
      "'def'",
      "'('",
      "')'",
      "'do'",
      "'end'",
      "'main'",
      "'if'",
      "'else'",
      "'while'",
      "'='",
      "'return'",
      "'puts'",
      "'in'",
      "'.'",
      "'['",
      "']'",
      "'as'",
      "'+'",
      "'-'",
      "'*'",
      "'/'",
      "'%'",
      "'!'",
      "'||'",
      "'&&'",
      "'<'",
      "'>'",
      "'<='",
      "'>='",
      "'=='",
      "'!='",
      "'defstruct'",
      "'void'",
      "'int'",
      "'double'",
      "'char'"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      "INT_CONSTANT",
      "CHAR_CONSTANT",
      "REAL_CONSTANT",
      "ID",
      "SINGLE_LINE_COMMENT",
      "MULTI_LINE_COMMENT",
      "WS"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "java-escape";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public XanaParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ProgramContext extends ParserRuleContext {
    public Program ast;
    public Definition_listContext definition_list;

    public Definition_listContext definition_list() {
      return getRuleContext(Definition_listContext.class, 0);
    }

    public ProgramContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_program;
    }
  }

  public final ProgramContext program() throws RecognitionException {
    ProgramContext _localctx = new ProgramContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_program);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(50);
        ((ProgramContext) _localctx).definition_list = definition_list();
        ((ProgramContext) _localctx).ast =
            new Program(0, 0, ((ProgramContext) _localctx).definition_list.list);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Definition_listContext extends ParserRuleContext {
    public List<Definition> list = new ArrayList<Definition>();
    ;
    public DefinitionContext definition;
    public Main_functionContext main_function;

    public Main_functionContext main_function() {
      return getRuleContext(Main_functionContext.class, 0);
    }

    public List<DefinitionContext> definition() {
      return getRuleContexts(DefinitionContext.class);
    }

    public DefinitionContext definition(int i) {
      return getRuleContext(DefinitionContext.class, i);
    }

    public Definition_listContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_definition_list;
    }
  }

  public final Definition_listContext definition_list() throws RecognitionException {
    Definition_listContext _localctx = new Definition_listContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_definition_list);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        setState(58);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
        while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            {
              {
                setState(53);
                ((Definition_listContext) _localctx).definition = definition();
                _localctx.list.addAll(((Definition_listContext) _localctx).definition.list);
              }
            }
          }
          setState(60);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
        }
        setState(61);
        ((Definition_listContext) _localctx).main_function = main_function();
        _localctx.list.add(((Definition_listContext) _localctx).main_function.ast);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class DefinitionContext extends ParserRuleContext {
    public List<Definition> list = new ArrayList<Definition>();
    ;
    public Var_definition_listContext var_definition_list;
    public Function_definitionContext function_definition;
    public Main_functionContext main_function;

    public Var_definition_listContext var_definition_list() {
      return getRuleContext(Var_definition_listContext.class, 0);
    }

    public Function_definitionContext function_definition() {
      return getRuleContext(Function_definitionContext.class, 0);
    }

    public Main_functionContext main_function() {
      return getRuleContext(Main_functionContext.class, 0);
    }

    public DefinitionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_definition;
    }
  }

  public final DefinitionContext definition() throws RecognitionException {
    DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_definition);
    try {
      setState(73);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(64);
            ((DefinitionContext) _localctx).var_definition_list = var_definition_list();
            _localctx.list.addAll(((DefinitionContext) _localctx).var_definition_list.list);
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(67);
            ((DefinitionContext) _localctx).function_definition = function_definition();
            _localctx.list.add(((DefinitionContext) _localctx).function_definition.ast);
          }
          break;
        case 3:
          enterOuterAlt(_localctx, 3);
          {
            setState(70);
            ((DefinitionContext) _localctx).main_function = main_function();
            _localctx.list.add(((DefinitionContext) _localctx).main_function.ast);
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Var_definition_listContext extends ParserRuleContext {
    public List<VarDefinition> list = new ArrayList<VarDefinition>();
    ;
    public Token ID;
    public List<Token> ids = new ArrayList<Token>();
    public TypeContext t;
    public TypeContext type;

    public List<TerminalNode> ID() {
      return getTokens(XanaParser.ID);
    }

    public TerminalNode ID(int i) {
      return getToken(XanaParser.ID, i);
    }

    public TypeContext type() {
      return getRuleContext(TypeContext.class, 0);
    }

    public Var_definition_listContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_var_definition_list;
    }
  }

  public final Var_definition_listContext var_definition_list() throws RecognitionException {
    Var_definition_listContext _localctx = new Var_definition_listContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_var_definition_list);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(75);
        ((Var_definition_listContext) _localctx).ID = match(ID);
        ((Var_definition_listContext) _localctx)
            .ids.add(((Var_definition_listContext) _localctx).ID);
        setState(80);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == T__0) {
          {
            {
              setState(76);
              match(T__0);
              setState(77);
              ((Var_definition_listContext) _localctx).ID = match(ID);
              ((Var_definition_listContext) _localctx)
                  .ids.add(((Var_definition_listContext) _localctx).ID);
            }
          }
          setState(82);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(83);
        match(T__1);
        setState(84);
        ((Var_definition_listContext) _localctx).t =
            ((Var_definition_listContext) _localctx).type = type();

        for (var id : ((Var_definition_listContext) _localctx).ids) {
          _localctx.list.add(
              new VarDefinition(
                  id.getLine(),
                  id.getCharPositionInLine() + 1,
                  ((Var_definition_listContext) _localctx).type.ast,
                  id.getText()));
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Function_definitionContext extends ParserRuleContext {
    public FunctionDefinition ast;
    public Token f;
    public ParamsContext params;
    public Function_typeContext t;
    public Function_bodyContext function_body;

    public ParamsContext params() {
      return getRuleContext(ParamsContext.class, 0);
    }

    public Function_bodyContext function_body() {
      return getRuleContext(Function_bodyContext.class, 0);
    }

    public TerminalNode ID() {
      return getToken(XanaParser.ID, 0);
    }

    public Function_typeContext function_type() {
      return getRuleContext(Function_typeContext.class, 0);
    }

    public Function_definitionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_function_definition;
    }
  }

  public final Function_definitionContext function_definition() throws RecognitionException {
    Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_function_definition);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(87);
        match(T__2);
        setState(88);
        ((Function_definitionContext) _localctx).f = match(ID);
        setState(89);
        match(T__3);
        setState(90);
        ((Function_definitionContext) _localctx).params = params();
        setState(91);
        match(T__4);
        setState(92);
        match(T__1);
        setState(93);
        ((Function_definitionContext) _localctx).t = function_type();
        setState(94);
        match(T__5);
        setState(95);
        ((Function_definitionContext) _localctx).function_body = function_body();
        setState(96);
        match(T__6);
        ((Function_definitionContext) _localctx).ast =
            new FunctionDefinition(
                ((Function_definitionContext) _localctx).f.getLine(),
                ((Function_definitionContext) _localctx).f.getCharPositionInLine() + 1,
                new FuncType(
                    ((Function_definitionContext) _localctx).t.ast.getLine(),
                    ((Function_definitionContext) _localctx).t.ast.getColumn(),
                    ((Function_definitionContext) _localctx).params.list,
                    ((Function_definitionContext) _localctx).t.ast),
                (((Function_definitionContext) _localctx).f != null
                    ? ((Function_definitionContext) _localctx).f.getText()
                    : null),
                ((Function_definitionContext) _localctx).function_body.statementList,
                ((Function_definitionContext) _localctx).function_body.varDefinitionList);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Main_functionContext extends ParserRuleContext {
    public FunctionDefinition ast;
    public Token m;
    public ParamsContext params;
    public Function_bodyContext function_body;

    public ParamsContext params() {
      return getRuleContext(ParamsContext.class, 0);
    }

    public Function_bodyContext function_body() {
      return getRuleContext(Function_bodyContext.class, 0);
    }

    public Main_functionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_main_function;
    }
  }

  public final Main_functionContext main_function() throws RecognitionException {
    Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_main_function);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(99);
        match(T__2);
        setState(100);
        ((Main_functionContext) _localctx).m = match(T__7);
        setState(101);
        match(T__3);
        setState(102);
        ((Main_functionContext) _localctx).params = params();
        setState(103);
        match(T__4);
        setState(104);
        match(T__5);
        setState(105);
        ((Main_functionContext) _localctx).function_body = function_body();
        setState(106);
        match(T__6);
        ((Main_functionContext) _localctx).ast =
            new FunctionDefinition(
                ((Main_functionContext) _localctx).m.getLine(),
                ((Main_functionContext) _localctx).m.getCharPositionInLine() + 1,
                new FuncType(
                    ((Main_functionContext) _localctx).m.getLine(),
                    ((Main_functionContext) _localctx).m.getCharPositionInLine() + 1,
                    ((Main_functionContext) _localctx).params.list,
                    new VoidType(
                        ((Main_functionContext) _localctx).m.getLine(),
                        ((Main_functionContext) _localctx).m.getCharPositionInLine() + 1)),
                "main",
                ((Main_functionContext) _localctx).function_body.statementList,
                ((Main_functionContext) _localctx).function_body.varDefinitionList);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class ParamsContext extends ParserRuleContext {
    public List<VarDefinition> list = new ArrayList<VarDefinition>();
    ;
    public Token var1;
    public TypeContext t1;
    public Token var2;
    public TypeContext t2;

    public List<TerminalNode> ID() {
      return getTokens(XanaParser.ID);
    }

    public TerminalNode ID(int i) {
      return getToken(XanaParser.ID, i);
    }

    public List<TypeContext> type() {
      return getRuleContexts(TypeContext.class);
    }

    public TypeContext type(int i) {
      return getRuleContext(TypeContext.class, i);
    }

    public ParamsContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_params;
    }
  }

  public final ParamsContext params() throws RecognitionException {
    ParamsContext _localctx = new ParamsContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_params);
    int _la;
    try {
      setState(125);
      _errHandler.sync(this);
      switch (_input.LA(1)) {
        case ID:
          enterOuterAlt(_localctx, 1);
          {
            setState(109);
            ((ParamsContext) _localctx).var1 = match(ID);
            setState(110);
            match(T__1);
            setState(111);
            ((ParamsContext) _localctx).t1 = type();
            _localctx.list.add(
                new VarDefinition(
                    ((ParamsContext) _localctx).var1.getLine(),
                    ((ParamsContext) _localctx).var1.getCharPositionInLine() + 1,
                    ((ParamsContext) _localctx).t1.ast,
                    (((ParamsContext) _localctx).var1 != null
                        ? ((ParamsContext) _localctx).var1.getText()
                        : null)));
            setState(121);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == T__0) {
              {
                {
                  setState(113);
                  match(T__0);
                  setState(114);
                  ((ParamsContext) _localctx).var2 = match(ID);
                  setState(115);
                  match(T__1);
                  setState(116);
                  ((ParamsContext) _localctx).t2 = type();
                  _localctx.list.add(
                      new VarDefinition(
                          ((ParamsContext) _localctx).var2.getLine(),
                          ((ParamsContext) _localctx).var2.getCharPositionInLine() + 1,
                          ((ParamsContext) _localctx).t2.ast,
                          (((ParamsContext) _localctx).var2 != null
                              ? ((ParamsContext) _localctx).var2.getText()
                              : null)));
                }
              }
              setState(123);
              _errHandler.sync(this);
              _la = _input.LA(1);
            }
          }
          break;
        case T__4:
          enterOuterAlt(_localctx, 2);
          {
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class Function_bodyContext extends ParserRuleContext {
    public List<Statement> statementList = new ArrayList<>();
    public List<VarDefinition> varDefinitionList = new ArrayList<>();
    public Var_definition_listContext var_definition_list;
    public StatementContext statement;

    public List<Var_definition_listContext> var_definition_list() {
      return getRuleContexts(Var_definition_listContext.class);
    }

    public Var_definition_listContext var_definition_list(int i) {
      return getRuleContext(Var_definition_listContext.class, i);
    }

    public List<StatementContext> statement() {
      return getRuleContexts(StatementContext.class);
    }

    public StatementContext statement(int i) {
      return getRuleContext(StatementContext.class, i);
    }

    public Function_bodyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_function_body;
    }
  }

  public final Function_bodyContext function_body() throws RecognitionException {
    Function_bodyContext _localctx = new Function_bodyContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_function_body);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        setState(132);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
        while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            {
              {
                setState(127);
                ((Function_bodyContext) _localctx).var_definition_list = var_definition_list();
                _localctx.varDefinitionList.addAll(
                    ((Function_bodyContext) _localctx).var_definition_list.list);
              }
            }
          }
          setState(134);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
        }
        setState(140);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (((_la) & ~0x3f) == 0 && ((1L << _la) & 8246372919824L) != 0) {
          {
            {
              setState(135);
              ((Function_bodyContext) _localctx).statement = statement();
              _localctx.statementList.addAll(((Function_bodyContext) _localctx).statement.list);
            }
          }
          setState(142);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  @SuppressWarnings("CheckReturnValue")
  public static class StatementContext extends ParserRuleContext {
    public List<Statement> list = new ArrayList<Statement>();
    ;
    public If_else_statementContext if_else_statement;
    public While_statementContext while_statement;
    public Assignment_statementContext assignment_statement;
    public Function_invocationContext function_invocation;
    public Return_statementContext return_statement;
    public Puts_statementContext puts_statement;
    public In_statementContext in_statement;

    public If_else_statementContext if_else_statement() {
      return getRuleContext(If_else_statementContext.class, 0);
    }

    public While_statementContext while_statement() {
      return getRuleContext(While_statementContext.class, 0);
    }

    public Assignment_statementContext assignment_statement() {
      return getRuleContext(Assignment_statementContext.class, 0);
    }

    public Function_invocationContext function_invocation() {
      return getRuleContext(Function_invocationContext.class, 0);
    }

    public Return_statementContext return_statement() {
      return getRuleContext(Return_statementContext.class, 0);
    }

    public Puts_statementContext puts_statement() {
      return getRuleContext(Puts_statementContext.class, 0);
    }

    public In_statementContext in_statement() {
      return getRuleContext(In_statementContext.class, 0);
    }

    public StatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_statement;
    }
  }
